<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_home"
            android:icon="@drawable/ic_home_white_48dp"
            android:title="@string/nav_index" />
        <item
            android:id="@+id/nav_menu_categories"
            android:icon="@drawable/ic_sort_by_alpha_white_48dp"
            android:title="@string/nav_type" />
        <item
            android:id="@+id/nav_menu_feedback"
            android:icon="@drawable/ic_message_white_48dp"
            android:title="@string/nav_returns" />
        <item
            android:id="@+id/nav_menu_setting"
            android:icon="@drawable/ic_settings_white_48dp"
            android:title="@string/nav_setting" />
    </group>
    <item android:title="@string/nav_menu_title">
        <menu >
            <item android:id="@+id/nav_menu_item_1"
                android:icon="@mipmap/ic_dashboard"
                android:title="@string/nav_menu_item_1"/>
            <item android:id="@+id/nav_menu_item_2"
                android:icon="@mipmap/ic_event"
                android:title="@string/nav_menu_item_2"/>
        </menu>
    </item>
</menu>